--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Todo List</title>
 </head>
-<body>
+<body class="body">
      <header>
          <h1>VickyJay's Todo List</h1>
      </header>
