--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
 </head>
 <body class="body">
      <header>
-         <h1>VickyJay's Todo List</h1>
+         <h1>Todo List</h1>
      </header>
      
      <form>
-         <input type="text" class="todo-input" id>
+        <div>
+             <input type="text" class="todo-input" id>
          <button class="todo-button" type="submit">
              <i class="fas fa-plus-square"></i>
          </button>
+        </div>
          <div class="select">
            <select name="todos" class="filter-todo">
                <option value="all">All</option>
